[package]
name = "advent_of_code2019"
version = "0.1.0"
authors = ["John Murray <5672686+JRMurr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
fraction = "0.6"
regex = "1"
lazy_static = "1.4"