cabal-version:      2.4
name:               aoc2019
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             John Murray
maintainer:         5672686+JRMurr@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2019
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Day02.Mod
        Utils.Mod
        Day01.Mod

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        split >= 0.2,
        pseudomacros >= 0.0.2,
        filepath >= 1.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: 
        TemplateHaskell
    ghc-options:
        -haddock
