cabal-version:      2.4
name:               aoc2019
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             John Murray
maintainer:         5672686+JRMurr@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2019
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Day11.Mod
        Day10.Mod
        Day09.Mod
        Day08.Mod
        Day07.Mod
        Day06.Mod
        Day05.Mod
        Day04.Mod
        Day03.Mod
        Day02.Mod
        Day01.Mod
        Utils.Mod
        Utils.Cords
        Utils.Intcode.Mod
        Utils.Intcode.Machine
        Utils.Intcode.Opcode


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        split >= 0.2,
        pseudomacros >= 0.0.2,
        filepath >= 1.4.0,
        vector >= 0.12.3,
        containers,
        megaparsec >= 9.0,
        primitive    ^>= 0.7,
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: 
        TemplateHaskell
    ghc-options:
        -haddock
